# wordsearch_solver

./: .clang-format  .gitignore  .gitmodules  .m.sh  CMakeLists.txt  Doxyfile  DoxygenREADME.md  LICENSE  NOTES  README.md  TODO  TODO.md  annotated.html  bench.sh  change_includes.sh  classcompact__trie2_1_1CompactTrie2-members.html  classcompact__trie2_1_1CompactTrie2.html  classcompact__trie2_1_1EmptyNodeView__-members.html  classcompact__trie2_1_1EmptyNodeView__.html  classcompact__trie2_1_1FullNodeView__-members.html  classcompact__trie2_1_1FullNodeView__.html  classcompact__trie2_1_1MiniOffsets-members.html  classcompact__trie2_1_1MiniOffsets.html  classcompact__trie2_1_1anonymous__namespace_02compact__trie2_8cpp_03_1_1NodeIteratorRange-members.html  classcompact__trie2_1_1anonymous__namespace_02compact__trie2_8cpp_03_1_1NodeIteratorRange.html  classcompact__trie_1_1CompactTrie-members.html  classcompact__trie_1_1CompactTrie.html  classcompact__trie_1_1Node-members.html  classcompact__trie_1_1Node.html  classconanfile_1_1WordsearchsolverConan-members.html  classconanfile_1_1WordsearchsolverConan.html  classconanfile_1_1WordsearchsolverTestConan-members.html  classconanfile_1_1WordsearchsolverTestConan.html  classdictionary__std__set_1_1DictionaryStdSet-members.html  classdictionary__std__set_1_1DictionaryStdSet.html  classdictionary__std__vector_1_1DictionaryStdVector-members.html  classdictionary__std__vector_1_1DictionaryStdVector.html  classes.html  classsolver_1_1SolverDictFactory-members.html  classsolver_1_1SolverDictFactory.html  (+111 more)
.github/workflows/: Documentation.yaml
bench/: bench.cpp
benchmark/: CMakeLists.txt  bench.cpp  bench.sh
cmake/: config.cmake.in  wordsearch_solver.hpp.in
cmdline_app/: CMakeLists.txt  bench.sh  main.cpp
compact_trie/: CMakeLists.txt  main.CMakeLists.txt  main.cpp
compact_trie/include/: compact_trie.hpp  compact_trie.tpp  node.hpp
compact_trie/include/wordsearch_solver/compact_trie/: compact_trie.hpp  compact_trie.tpp  node.hpp
compact_trie/src/: compact_trie.cpp  node.cpp
compact_trie2/: CMakeLists.txt  main.CMakeLists.txt  main.cpp
compact_trie2/include/: compact_trie2.hpp  compact_trie2.tpp  compact_trie2_iterator_typedefs.hpp  empty_node_view.hpp  flat_char_value_map.hpp  full_node_view.hpp  mini_offsets.hpp
compact_trie2/include/wordsearch_solver/compact_trie2/: compact_trie2.hpp  compact_trie2.tpp  compact_trie2_iterator_typedefs.hpp  empty_node_view.hpp  full_node_view.hpp  mini_offsets.hpp
compact_trie2/src/: compact_trie2.cpp  empty_node_view.cpp  full_node_view.cpp
dictionary_std_set/: CMakeLists.txt
dictionary_std_set/include/wordsearch_solver/dictionary_std_set/: dictionary_std_set.hpp  dictionary_std_set.tpp
dictionary_std_set/src/: dictionary_std_set.cpp
dictionary_std_vector/: CMakeLists.txt
dictionary_std_vector/include/wordsearch_solver/dictionary_std_vector/: dictionary_std_vector.hpp  dictionary_std_vector.tpp
dictionary_std_vector/src/: dictionary_std_vector.cpp
example/: CMakeLists.txt  example.cpp
examples/: asdf  asdf.bigger
gui_app/: CMakeLists.txt  README.md  conanfile.py  main.cpp  wordsearch.txt
include/: dictionary.h  dictionary_std_set.h  dictionary_std_unordered_map.h  dictionary_std_vector.h  stringindexes.h  wordsearch_solver.h  wordsearch_solver.tcc  wordsearch_solver_defs.h
jr_assert/: CMakeLists.txt  README.md.old  main.cpp
jr_assert/include/: jr_assert.h
notes/: PERFORMANCE_NOTES.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+18 more)
solver/: CMakeLists.txt
solver/include/wordsearch_solver/solver/: solver.hpp  solver.tpp
solver/src/: solver.cpp
src/: dictionary.cpp  dictionary_std_set.cpp  dictionary_std_unordered_map.cpp  dictionary_std_vector.cpp  main.cpp  stringindexes.cpp  wordsearch_solver.cpp
test/: CMakeLists.txt  test_cases.cpp  test_cases.hpp  test_cases2.cpp
test/test_cases/: dictionary.txt  massive_wordsearch.txt
test/test_cases/long_words/: answers.txt  note.txt  wordsearch.txt
test/test_cases/smaller_test/: answers.txt  wordsearch.txt
test/test_cases/tiny_test/: wordsearch.txt
test/test_cases/tiny_test_2/: answers.txt  wordsearch.txt
test_package/: CMakeLists.txt  conanfile.py  example.cpp
trie/: CMakeLists.txt  main.CMakeLists.txt  main.cpp
trie/include/: node.hpp  trie.h  trie.hpp  trie.tpp
trie/include/wordsearch_solver/trie/: node.hpp  trie.hpp  trie.tpp
trie/jr_assert/: CMakeLists.txt  test_gen.sh  zmain.cpp
trie/jr_assert/include/jr_assert/: jr_assert.h
trie/src/: node.cpp  trie.cpp
trie/trie/: CMakeLists.txt
trie/trie/include/: trie.h
utility/: CMakeLists.txt  main.cpp
utility/include/utility/: flat_char_value_map.hpp  utility.hpp
utility/include/wordsearch_solver/utility/: flat_char_value_map.hpp  lru_cache.hpp  utility.hpp  utility.tpp
utility/src/: utility.cpp
